--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ django = ">=2.0"
 djangorestframework = ">=3.8.0"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.1.0"
+isort = "^5.12.0"
+flake8 = "^5.0.4"
+pre-commit = "^3.0.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
