--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,12 @@
+[tool.isort]
+profile = "black"
+
+[tool.black]
+line-length = 100
+
 [tool.poetry]
 name = "drf-nested"
-version = "1.2.23"
+version = "1.2.24"
 description = ""
 authors = ["Artur Veres <artur8118@gmail.com>", "Andréas Kühne <andreas.kuhne@promoteint.com>"]
 license = "License :: OSI Approved :: MIT License"
@@ -12,6 +18,12 @@ python = "^3.8"
 django = ">=2.0"
 djangorestframework = ">=3.8.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.1.0"
+isort = "^5.12.0"
+flake8 = "^5.0.4"
+pre-commit = "^3.0.4"
 
 [build-system]
 requires = ["poetry-core"]
