--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,32 +2,23 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.1.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: check-yaml
       - id: check-added-large-files
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
 
-  - repo: local
-    hooks:
-      - id: flake8
-        name: flake8
-        entry: flake8
-        types: [ python ]
-        language: python
-        stages: [ push, commit ]
-
-  - repo: local
+  - repo: https://github.com/ambv/black
+    rev: 24.4.2
     hooks:
       - id: black
-        name: black
-        entry: black
-        types: [ python ]
-        language: python
-        stages: [ push, commit ]
+
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.1.0
+    hooks:
+      - id: flake8
