--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,16 +14,20 @@ readme = "README.md"
 packages = [{ include = "drf_nested" }]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-django = ">=2.0"
-djangorestframework = ">=3.8.0"
+python = ">=3.10,<3.13"
+django = ">=3.0.0,<6.0.0"
+djangorestframework = ">=3.15.2"
 
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-isort = "^5.12.0"
+black = "^23.12.1"
+isort = "^5.13.2"
 flake8 = "^5.0.4"
-pre-commit = "^3.0.4"
+pre-commit = "^3.7.1"
+pytest-django = "^4.8.0"
+poetry-plugin-up = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core"]
