--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
+[project]
+name = "drf-nested"
+version = "1.3.3"
+description = "DRF Nested"
+requires-python = ">=3.10,<3.14"
+license = { text = "MIT" }
+authors = [
+    {name = "Artur Veres", email = "artur8118@gmail.com"},
+    {name = "Andréas Kühne", email = "andreas.kuhne@promoteint.com"},
+]
+readme = "README.md"
+packages = [{ include = "drf_nested" }]
+dynamic = [ "dependencies" ]
+
 [tool.isort]
 profile = "black"
 
@@ -18,15 +32,6 @@ addopts = "--disable-pytest-warnings -v --reuse-db"
 #addopts = "--disable-pytest-warnings -v --reuse-db --create-db"
 DJANGO_SETTINGS_MODULE="nested_example.settings"
 
-[tool.poetry]
-name = "drf-nested"
-version = "1.3.2"
-description = ""
-authors = ["Artur Veres <artur8118@gmail.com>", "Andréas Kühne <andreas.kuhne@promoteint.com>"]
-license = "License :: OSI Approved :: MIT License"
-readme = "README.md"
-packages = [{ include = "drf_nested" }]
-
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
 django = ">=3.0.0,<6.0.0"
@@ -36,13 +41,13 @@ djangorestframework = ">=3.16.0"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
+black = "^24.10.0"
 isort = "^5.13.2"
-flake8 = "^7.1.1"
+flake8 = "^7.2.0"
 pre-commit = "^3.8.0"
-pytest-django = "^4.8.0"
+pytest-django = "^4.11.1"
 poetry-plugin-up = "^0.3.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
